[gd_scene load_steps=7 format=3 uid="uid://ctuaj5ssx71h4"]

[ext_resource type="Script" path="res://mob2.gd" id="1_fphxi"]
[ext_resource type="Texture2D" uid="uid://mxtuquw688ak" path="res://Mobs/shadow2_sprite1.png" id="2_qtvhm"]
[ext_resource type="Texture2D" uid="uid://b8igtiqki031k" path="res://Mobs/shadow2_sprite2.png" id="3_waqm3"]
[ext_resource type="Texture2D" uid="uid://dhlcopw1ma07a" path="res://Mobs/shadow2_sprite3.png" id="4_d1odi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4ibi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qtvhm")
}, {
"duration": 1.0,
"texture": ExtResource("3_waqm3")
}, {
"duration": 1.0,
"texture": ExtResource("4_d1odi")
}, {
"duration": 1.0,
"texture": ExtResource("4_d1odi")
}],
"loop": true,
"name": &"move2",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g12a"]
size = Vector2(120, 105)

[node name="Mob2" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_fphxi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.375, 7.78124)
scale = Vector2(0.302315, 0.356163)
sprite_frames = SubResource("SpriteFrames_4ibi8")
animation = &"move2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12, 14.5)
shape = SubResource("RectangleShape2D_1g12a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(9, -11)
scale = Vector2(1.9, 2.1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
